# agentic-infra

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  STATUS.md  dev  pyproject.toml
.claude/: mcp.json  settings.json
.claude/hooks/: fmt-on-edit.py  git-hook.py  guard.py
.cursor/: active-areas.md  hooks.json  learnings-index.md  learnings.md  mcp.json  worktrees.json
.cursor/agents/: architecture-reviewer.md  evidence-reviewer.md  migration-checker.md  onboarding-reviewer.md  performance-reviewer.md  reliability-reviewer.md  security-reviewer.md
.cursor/commands/: _session-qa-checklist.md  catchup.md  challenge.md  checkpoint.md  debug.md  handoff.md  impact.md  polish.md  qualify.md  regressions.md  review-agent.md  review.md  roadmap.md  swarm-context.md  swarm-fix.md  swarm-plan.md  swarm-review.md  swarm.md  tighten.md  todos.md  verify.md  whatnow.md
.cursor/plans/: README.md
.genai/: active-areas.md  learnings-index.md  learnings.md
.githooks/: pre-commit
.snip/: README.md  dev-verify.yaml  git-log.yaml  git-status.yaml
docs/: CONVENTIONS.md  PRINCIPLES.md  ROADMAP.md
evals/: README.md
project/: .dockerignore  README.md
tests/: test_agent_eval_runner.py  test_agent_eval_schema.py  test_agent_eval_scoring.py  test_dev_entrypoint.py  test_fmt_on_edit.py  test_guard.py  test_pre_commit_wrapper.py  test_project_context_corpus.py  test_project_context_runtime.py  test_project_context_server_runtime.py
walkthrough/: 1-core.md  2-agents-personas.md  3-mcp.md  4-persistence.md  5-rag.md  6-evals.md  main.md
(+163 files in other folders)
